--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,15 @@
   <body>
     <div id="app"></div>
   </body>
-  
+  <style>
+    *{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+  </style>
 </html>
 
