New Design With Slider

--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,10 @@
     <meta name="apple-mobile-web-app-title" content="Ionic App" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" /> -->
 
-    <script type="text/javascript" src="dist/main.bundle.js"></script>
-   
+    <script type="text/javascript" src="/dist/main.bundle.js"></script>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@1,900&display=swap');
+     </style>
   </head>
 
   <body>
